# SlicerSegmentationExport

./: CMakeLists.txt  README.md  SlicerSegmentationExport.py
SlicerSegmentationExport/: CMakeLists.txt  SlicerSegmentationExport.py
SlicerSegmentationExport/Resources/UI/: SlicerSegmentationExport.ui
